add tabular deprecation

--- a/INSTALL
+++ b/INSTALL
@@ -284,8 +284,8 @@ docker, elasticsearch, exasol, fab, facebook, ftp, github, google, grpc, hashico
 influxdb, jdbc, jenkins, microsoft.azure, microsoft.mssql, microsoft.psrp, microsoft.winrm, mongo,
 mysql, neo4j, odbc, openai, openfaas, openlineage, opensearch, opsgenie, oracle, pagerduty,
 papermill, pgvector, pinecone, postgres, presto, qdrant, redis, salesforce, samba, segment,
-sendgrid, sftp, singularity, slack, smtp, snowflake, sqlite, ssh, tableau, telegram, teradata,
-trino, vertica, weaviate, yandex, zendesk
+sendgrid, sftp, singularity, slack, smtp, snowflake, sqlite, ssh, tableau, tabular, telegram,
+teradata, trino, vertica, weaviate, yandex, zendesk
 
 # END PROVIDER EXTRAS HERE
 
