Add collapsible failed task logs to prevent React error 185
- Recent failed task logs now start collapsed by default
- Added "Expand Logs"/"Hide Logs" toggle buttons with translations
- Implemented lazy loading - logs only fetch when expanded
- Prevents page crashes from large log content rendering
- Increased log container max height from 100px to 200px

--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
@@ -84,6 +84,8 @@
       "assetEvent_other": "Created Asset Events"
     },
     "failedLogs": {
+      "expandLogs": "Expand Logs",
+      "hideLogs": "Hide Logs",
       "title": "Recent Failed Task Logs",
       "viewFullLogs": "View full logs"
     }
