Apply suggestion from @bbovenzi
Co-authored-by: Brent Bovenzi <brent.bovenzi@gmail.com>

--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
@@ -84,8 +84,8 @@
       "assetEvent_other": "Created Asset Events"
     },
     "failedLogs": {
-      "expandLogs": "Expand Logs",
       "hideLogs": "Hide Logs",
+      "showLogs": "Show Logs",
       "title": "Recent Failed Task Logs",
       "viewFullLogs": "View full logs"
     }
