--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/common.json
@@ -7,6 +7,7 @@
     "Providers": "Providers",
     "Variables": "Variables"
   },
+  "allOperators": "All Operators",
   "asset_one": "Asset",
   "asset_other": "Assets",
   "assetEvent_one": "Asset Event",
@@ -155,6 +156,7 @@
     "users": "Users"
   },
   "selectLanguage": "Select Language",
+  "selectOperator": "Select Operator",
   "showDetailsPanel": "Show Details Panel",
   "source": {
     "hide": "Hide Source",
