Update Missing translation for Polish 14 of August

--- a/airflow-core/src/airflow/ui/public/i18n/locales/pl/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pl/dag.json
@@ -39,6 +39,11 @@
     "viewInExternal": "Zobacz logi w {{name}} (próba {{attempt}})",
     "warning": "WARNING"
   },
+  "navigation": {
+    "jump": "Strona: Shift+{{arrow}}",
+    "navigation": "Przewijanie: {{arrow}}",
+    "toggleGroup": "Przełącz grupę: Space"
+  },
   "overview": {
     "buttons": {
       "failedRun_few": "Nieudane wykonania",
