--- a/airflow-core/src/airflow/ui/public/i18n/locales/pl/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pl/dag.json
@@ -40,7 +40,7 @@
     "warning": "WARNING"
   },
   "navigation": {
-    "jump": "Strona: Shift+{{arrow}}",
+    "jump": "Przeskocz: Shift+{{arrow}}",
     "navigation": "Przewijanie: {{arrow}}",
     "toggleGroup": "Przełącz grupę: Space"
   },
