--- a/airflow-core/src/airflow/ui/public/i18n/locales/pl/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pl/dag.json
@@ -41,7 +41,7 @@
   },
   "navigation": {
     "jump": "Przeskocz: Shift+{{arrow}}",
-    "navigation": "Przewijanie: {{arrow}}",
+    "navigation": "Przewiń: {{arrow}}",
     "toggleGroup": "Przełącz grupę: Space"
   },
   "overview": {
