add trigger rules

--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/common.json
@@ -156,7 +156,8 @@
     "users": "Users"
   },
   "selectLanguage": "Select Language",
-  "selectOperator": "Select Operator",
+  "selectOperator": "Select Operators",
+  "selectTriggerRules": "Select trigger rules",
   "showDetailsPanel": "Show Details Panel",
   "source": {
     "hide": "Hide Source",
