add retry values filters

--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/common.json
@@ -157,6 +157,7 @@
   },
   "selectLanguage": "Select Language",
   "selectOperator": "Select Operators",
+  "selectRetryValues": "Select retry values",
   "selectTriggerRules": "Select trigger rules",
   "showDetailsPanel": "Show Details Panel",
   "source": {
