change fornecedor (refers to physical things) to Provider (keep it in english due to it is a tech term)

--- a/airflow-core/src/airflow/ui/public/i18n/locales/pt/admin.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pt/admin.json
@@ -35,7 +35,7 @@
       "connectionTypeRequired": "Tipo de Conexão é obrigatório",
       "extraFields": "Campos Extra",
       "extraFieldsJson": "Campos Extra JSON",
-      "helperText": "Tipo de conexão faltando? Certifique-se de ter instalado o pacote do fornecedor correspondente ao Airflow.",
+      "helperText": "Tipo de conexão faltando? Certifique-se de ter instalado o pacote do provider correspondente ao Airflow.",
       "selectConnectionType": "Selecionar Tipo de Conexão",
       "standardFields": "Campos Padrão"
     },
