--- a/airflow-core/src/airflow/ui/public/i18n/locales/pt/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pt/common.json
@@ -4,7 +4,7 @@
     "Connections": "Conexões",
     "Plugins": "Plugins",
     "Pools": "Pools",
-    "Providers": "Fornecedores",
+    "Providers": "Providers",
     "Variables": "Variáveis"
   },
   "asset_one": "Asset",
