fix(i18n): modify translations

--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
@@ -14,16 +14,29 @@
     "legend": {
       "successRateSpectrum": "Success Rate Spectrum",
       "tooltips": {
-        "failed": "Less than 20% Success",
-        "success100": "100% Success",
-        "successRate20": "20%+ Success Rate",
-        "successRate40": "40%+ Success Rate",
-        "successRate60": "60%+ Success Rate",
-        "successRate80": "80%+ Success Rate"
+        "failed": "Less than {{percent}}% Success",
+        "success100": "{{percent}}% Success",
+        "successRate": "{{percent}}%+ Success Rate"
       }
     },
+    "navigation": {
+      "nextMonth": "Next month",
+      "nextYear": "Next year",
+      "previousMonth": "Previous month",
+      "previousYear": "Previous year"
+    },
     "noData": "No data available",
-    "week": "Week {{weekNumber}}"
+    "noRuns": "No runs",
+    "week": "Week {{weekNumber}}",
+    "weekdays": {
+      "friday": "Fri",
+      "monday": "Mon",
+      "saturday": "Sat",
+      "sunday": "Sun",
+      "thursday": "Thu",
+      "tuesday": "Tue",
+      "wednesday": "Wed"
+    }
   },
   "code": {
     "bundleUrl": "Bundle Url",
