implement review comments

--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/browse.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/browse.json
@@ -11,9 +11,7 @@
       "when": "When"
     },
     "filters": {
-      "endDateTime": "End date and time",
-      "eventType": "Event Type",
-      "startDateTime": "Start date and time"
+      "eventType": "Event Type"
     },
     "title": "Audit Log"
   },
