--- a/airflow-core/src/airflow/ui/public/i18n/locales/de/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/de/common.json
@@ -92,6 +92,17 @@
     "any": "Jeder",
     "or": "ODER"
   },
+  "filters": {
+    "dagDisplayNamePlaceholder": "Nach Dag filtern",
+    "keyPlaceholder": "Nach Task Kommunikation (XComs) Schlüssel filtern",
+    "logicalDateFromPlaceholder": "Logisches Datum Von",
+    "logicalDateToPlaceholder": "Logisches Datum Bis",
+    "mapIndexPlaceholder": "Nach Planungs-Index filtern",
+    "runAfterFromPlaceholder": "Nach Gelaufen ab filtern",
+    "runAfterToPlaceholder": "Nach Gelaufen bis filtern",
+    "runIdPlaceholder": "Nach Lauf ID filtern",
+    "taskIdPlaceholder": "Nach Task ID filtern"
+  },
   "logicalDate": "Logisches Datum",
   "logout": "Abmelden",
   "logoutConfirmation": "Sie sind dabei sich von dem System abzumelden.",
