--- a/airflow-core/src/airflow/ui/public/i18n/locales/pt/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pt/common.json
@@ -48,8 +48,8 @@
   "dagRun": {
     "conf": "Conf",
     "dagVersions": "Versão(s) do DAG",
-    "dataIntervalEnd": "Intervalo de Data Final",
-    "dataIntervalStart": "Intervalo de Data Inicial",
+    "dataIntervalEnd": "Fim do Intervalo de Dados",
+    "dataIntervalStart": "Início do Intervalo de Dados",
     "lastSchedulingDecision": "Última Decisão de Agendamento",
     "queuedAt": "Enfileirado Em",
     "runAfter": "Executar Depois",
