feat(i18n): Update according to comments and fill missing parts

--- a/airflow-core/src/airflow/ui/public/i18n/locales/tr/admin.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/tr/admin.json
@@ -19,11 +19,17 @@
       "host": "Host",
       "port": "Port"
     },
+    "connection_few": "Bağlantılar",
+    "connection_many": "Bağlantılar",
     "connection_one": "Bağlantı",
     "connection_other": "Bağlantılar",
     "delete": {
+      "deleteConnection_few": "{{count}} bağlantıyı sil",
+      "deleteConnection_many": "{{count}} bağlantıyı sil",
       "deleteConnection_one": "1 bağlantıyı sil",
       "deleteConnection_other": "{{count}} bağlantıyı sil",
+      "firstConfirmMessage_few": "Aşağıdaki bağlantıları silmek üzeresiniz:",
+      "firstConfirmMessage_many": "Aşağıdaki bağlantıları silmek üzeresiniz:",
       "firstConfirmMessage_one": "Aşağıdaki bağlantıyı silmek üzeresiniz:",
       "firstConfirmMessage_other": "Aşağıdaki bağlantıları silmek üzeresiniz:",
       "title": "Bağlantıyı Sil"
@@ -36,12 +42,13 @@
       "extraFields": "Ek Alanlar",
       "extraFieldsJson": "Ek Alanlar JSON",
       "helperText": "Bağlantı tipi eksik mi? İlgili Airflow Providers paketini yüklediğinizden emin olun.",
+      "helperTextForRedactedFields": "Gizlenmiş alanlar ('***') değiştirilmedikçe kaydedilmeyecektir.",
       "selectConnectionType": "Bağlantı Tipi Seçin",
       "standardFields": "Standart Alanlar"
     },
     "nothingFound": {
-      "description": "Çevre değişkenleri veya gizli anahtar yöneticileri ile tanımlanan bağlantılar burada listelenmez.",
-      "documentationLink": "Airflow belgelerinde daha fazla bilgi edinin.",
+      "description": "Ortam değişkenleri veya gizli sır yönetimi ile tanımlanan bağlantılar burada listelenmez.",
+      "documentationLink": "Airflow dokümantasyonuna daha fazla bilgi edinin.",
       "learnMore": "Bunlar çalışma zamanında çözümlenir ve arayüzde görünmez.",
       "title": "Bağlantı bulunamadı!"
     },
@@ -78,6 +85,8 @@
     "columns": {
       "source": "Kaynak"
     },
+    "importError_few": "Eklenti İçe Aktarma Hataları",
+    "importError_many": "Eklenti İçe Aktarma Hataları",
     "importError_one": "Eklenti İçe Aktarma Hatası",
     "importError_other": "Eklenti İçe Aktarma Hataları",
     "searchPlaceholder": "Dosyaya göre ara"
@@ -99,6 +108,8 @@
       "slots": "İşlem yuvaları"
     },
     "noPoolsFound": "Havuz bulunamadı",
+    "pool_few": "Havuzlar",
+    "pool_many": "Havuzlar",
     "pool_one": "Havuz",
     "pool_other": "Havuzlar",
     "searchPlaceholder": "Havuzları Ara",
@@ -120,8 +131,12 @@
       "isEncrypted": "Şifrelenmiş"
     },
     "delete": {
+      "deleteVariable_few": "{{count}} Değişkeni Sil",
+      "deleteVariable_many": "{{count}} Değişkeni Sil",
       "deleteVariable_one": "1 Değişkeni Sil",
       "deleteVariable_other": "{{count}} Değişkeni Sil",
+      "firstConfirmMessage_few": "Aşağıdaki değişkenleri silmek üzeresiniz:",
+      "firstConfirmMessage_many": "Aşağıdaki değişkenleri silmek üzeresiniz:",
       "firstConfirmMessage_one": "Aşağıdaki değişkeni silmek üzeresiniz:",
       "firstConfirmMessage_other": "Aşağıdaki değişkenleri silmek üzeresiniz:",
       "title": "Değişkeni Sil",
@@ -160,6 +175,8 @@
     },
     "noRowsMessage": "Değişken bulunamadı",
     "searchPlaceholder": "Anahtarları Ara",
+    "variable_few": "Değişkenler",
+    "variable_many": "Değişkenler",
     "variable_one": "Değişken",
     "variable_other": "Değişkenler"
   }
