--- a/airflow-core/src/airflow/ui/public/i18n/locales/tr/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/tr/dag.json
@@ -19,23 +19,49 @@
   },
   "header": {
     "buttons": {
+      "advanced": "Gelişmiş",
       "dagDocs": "Dag Belgeleri"
     }
   },
   "logs": {
-    "noTryNumber": "Deneme numarası yok",
-    "viewInExternal": "Günlükleri {{name}} içinde görüntüle (deneme {{attempt}})"
+    "allLevels": "Tüm Günlük Seviyeleri",
+    "allSources": "Tüm Kaynaklar",
+    "critical": "KRİTİK",
+    "debug": "HATA AYIKLAMA",
+    "error": "HATA",
+    "fullscreen": {
+      "button": "Tam ekran",
+      "tooltip": "Tam ekran için {{hotkey}} tuşuna basın"
+    },
+    "info": "BİLGİ",
+    "noTryNumber": "Tekrar Deneme numarası yok",
+    "settings": "Günlük Ayarları",
+    "viewInExternal": "Günlükleri {{name}} içinde görüntüle (deneme {{attempt}})",
+    "warning": "UYARI"
+  },
+  "navigation": {
+    "jump": "Atla: Shift+{{arrow}}",
+    "navigation": "Gezin: {{arrow}}",
+    "toggleGroup": "Grubu aç/kapat: Space"
   },
   "overview": {
     "buttons": {
+      "failedRun_few": "Başarısız Çalıştırmalar",
+      "failedRun_many": "Başarısız Çalıştırmalar",
       "failedRun_one": "Başarısız Çalıştırma",
       "failedRun_other": "Başarısız Çalıştırmalar",
+      "failedTask_few": "Başarısız Görevler",
+      "failedTask_many": "Başarısız Görevler",
       "failedTask_one": "Başarısız Görev",
       "failedTask_other": "Başarısız Görevler",
+      "failedTaskInstance_few": "Başarısız Görev Örnekleri",
+      "failedTaskInstance_many": "Başarısız Görev Örnekleri",
       "failedTaskInstance_one": "Başarısız Görev Örneği",
       "failedTaskInstance_other": "Başarısız Görev Örnekleri"
     },
     "charts": {
+      "assetEvent_few": "Oluşturulan Varlık Etkinlikleri",
+      "assetEvent_many": "Oluşturulan Varlık Etkinlikleri",
       "assetEvent_one": "Oluşturulan Varlık Etkinliği",
       "assetEvent_other": "Oluşturulan Varlık Etkinlikleri"
     },
@@ -82,14 +108,17 @@
   "tabs": {
     "assetEvents": "Varlık Etkinlikleri",
     "auditLog": "Denetim Günlüğü",
-    "backfills": "Geriye Doldurma İşlemleri",
+    "backfills": "Geriye Dönük Çalıştırma İşlemleri",
     "code": "Kod",
     "details": "Detaylar",
     "logs": "Günlükler",
+    "mappedTaskInstances_few": "Görev Örnekleri [{{count}}]",
+    "mappedTaskInstances_many": "Görev Örnekleri [{{count}}]",
     "mappedTaskInstances_one": "Görev Örneği [{{count}}]",
     "mappedTaskInstances_other": "Görev Örnekleri [{{count}}]",
     "overview": "Genel Bakış",
     "renderedTemplates": "İşlenmiş Şablonlar",
+    "requiredActions": "Gerekli Eylemler",
     "runs": "Çalıştırmalar",
     "taskInstances": "Görev Örnekleri",
     "tasks": "Görevler",
@@ -98,13 +127,5 @@
   "taskGroups": {
     "collapseAll": "Tüm görev gruplarını daralt",
     "expandAll": "Tüm görev gruplarını genişlet"
-  },
-  "taskLogs": {
-    "allLogLevels": "Tüm Günlük Seviyeleri",
-    "allSources": "Tüm Kaynaklar",
-    "fullscreen": {
-      "button": "Tam ekran",
-      "tooltip": "Tam ekran için {{hotkey}} tuşuna basın"
-    }
   }
 }
