feat(i18n): Update according to comments and fill missing parts

--- a/airflow-core/src/airflow/ui/public/i18n/locales/tr/admin.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/tr/admin.json
@@ -47,7 +47,7 @@
       "standardFields": "Standart Alanlar"
     },
     "nothingFound": {
-      "description": "Ortam değişkenleri veya gizli sır yönetimi ile tanımlanan bağlantılar burada listelenmez.",
+      "description": "Sistem Ortam değişkenleri veya gizli sır yönetimi ile tanımlanan bağlantılar burada listelenmez.",
       "documentationLink": "Airflow dokümantasyonuna daha fazla bilgi edinin.",
       "learnMore": "Bunlar çalışma zamanında çözümlenir ve arayüzde görünmez.",
       "title": "Bağlantı bulunamadı!"
