--- a/airflow-core/src/airflow/ui/public/i18n/locales/tr/dashboard.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/tr/dashboard.json
@@ -1,4 +1,10 @@
 {
+  "favorite": {
+    "favoriteDags_one": "İlk {{count}} favori Dag(lar)",
+    "favoriteDags_other": "İlk {{count}} favori Dag(lar)",
+    "noDagRuns": "Bu dag için henüz Dag Çalıştırması yok.",
+    "noFavoriteDags": "Henüz favori yok. Favorilere eklemek için listede bir Dag'ın yanındaki yıldız simgesine tıklayın."
+  },
   "group": "Grup",
   "health": {
     "dagProcessor": "Dag İşlemcisi",
@@ -30,6 +36,7 @@
     "activeDags": "Aktif Dag'ler",
     "failedDags": "Başarısız Dag'ler",
     "queuedDags": "Kuyruktaki Dag'ler",
+    "requiredActions": "Gerekli Eylemler",
     "runningDags": "Çalışan Dag'ler",
     "stats": "İstatistikler"
   },
