--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/common.json
@@ -161,6 +161,7 @@
     },
     "tooltip": "Press {{hotkey}} to scroll to {{direction}}"
   },
+  "searchTasks": "Search tasks",
   "seconds": "{{count}}s",
   "security": {
     "actions": "Actions",
