Add missing translations PL - 21-08-2025

--- a/airflow-core/src/airflow/ui/public/i18n/locales/pl/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pl/dag.json
@@ -73,6 +73,7 @@
   "panel": {
     "buttons": {
       "options": "Opcje",
+      "showGantt": "Pokaż diagram Gantt-a",
       "showGraph": "Pokaż graf",
       "showGrid": "Pokaż siatkę"
     },
