--- a/airflow-core/src/airflow/ui/public/i18n/locales/pl/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pl/dag.json
@@ -73,7 +73,7 @@
   "panel": {
     "buttons": {
       "options": "Opcje",
-      "showGantt": "Pokaż diagram Gantt-a",
+      "showGantt": "Pokaż diagram Gantta",
       "showGraph": "Pokaż graf",
       "showGrid": "Pokaż siatkę"
     },
